# thin-edge.io

.github/workflows/: pull-request-checks.yml
crates/common/tedge_config/: Cargo.toml
crates/common/tedge_config/src/system_services/: manager.rs
crates/common/tedge_config/src/tedge_config_cli/: tedge_config_repository.rs
crates/common/tedge_config/tests/: integration.rs
crates/common/tedge_utils/: Cargo.toml
crates/common/tedge_utils/src/: fs_notify.rs  lib.rs  notify.rs  tedge_derive.rs
crates/common/tedge_utils/tedge-derive/: Cargo.toml
crates/common/tedge_utils/tedge-derive/src/: lib.rs
crates/common/test_utils/: Cargo.toml
crates/common/test_utils/src/: lib.rs
crates/core/c8y_api/src/: http_proxy.rs
crates/core/c8y_smartrest/: Cargo.toml
crates/core/tedge/src/cli/: mod.rs
crates/core/tedge/src/cli/connect/: cli.rs  command.rs
crates/core/tedge/src/cli/disconnect/: cli.rs  disconnect_bridge.rs
crates/core/tedge/src/cli/reconnect/: cli.rs  mod.rs  reconnect.rs
crates/core/tedge/tests/: mqtt.rs
crates/core/tedge_agent/: Cargo.toml
crates/core/tedge_agent/src/: agent.rs  error.rs  http_rest.rs
crates/core/tedge_mapper/: Cargo.toml
crates/core/tedge_mapper/src/c8y/: converter.rs  mapper.rs  tests.rs
crates/core/tedge_mapper/src/core/: mapper.rs
crates/tests/mqtt_tests/src/: lib.rs  test_mqtt_server.rs
crates/tests/tedge_test_utils/src/: fs.rs
plugins/c8y_configuration_plugin/src/: upload.rs
