[package]
name = "tedge-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
syn = { version = "1.0", features = [ "full", "extra-traits" ] }
quote = "1.0"
